--- a/index.html
+++ b/index.html
@@ -734,7 +734,8 @@
               I accept the terms and conditions of the&nbsp;<a
                 href="#"
                 class="privacy-policy-link"
-                >Privacy Policy</a>
+                >Privacy Policy</a
+              >
             </label>
           </div>
 
@@ -742,7 +743,7 @@
         </form>
       </div>
     </div>
-    <script src="./js/modal.js"></script>
-    <script src="./js/mobile-menu.js"></script>
+    <script src="./modal.js"></script>
+    <script src="./mobile-menu.js"></script>
   </body>
 </html>
